--- a/Client/src/styles/login.module.css
+++ b/Client/src/styles/login.module.css
@@ -1,9 +1,10 @@
 .main {
-    height: 95vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 .holder {
